DecafGramParser.py
# Generated from DecafGram.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class DecafGramParser ( Parser ):

    grammarFileName = "DecafGram.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'Program'", "'if'", "'else'", 
                     "'for'", "'while'", "'return'", "'break'", "'continue'", 
                     "'boolean'", "'char'", "'int'", "'True'", "'False'", 
                     "'void'", "'struct'", "'callout'", "';'", "'{'", "'}'", 
                     "'['", "']'", "'('", "')'", "','", "'\"'", "'''", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", 
                     "'>'", "'<'", "'>='", "'<='", "'='", "'+='", "'-='", 
                     "'=='", "'!='", "'.'" ]

    symbolicNames = [ "<INVALID>", "CLASS", "PROGRAM", "IF", "ELSE", "FOR", 
                      "WHILE", "RETURN", "BREAK", "CONTINUE", "BOOLEAN", 
                      "CHAR", "INT", "TRUE", "FALSE", "VOID", "STRUCT", 
                      "CALLOUT", "SEMICOLON", "LCURLY", "RCURLY", "LSQUARE", 
                      "RSQUARE", "LROUND", "RROUND", "COMMA", "QUOTES", 
                      "APOSTROPHE", "ADD", "SUB", "MULTIPLY", "DIVIDE", 
                      "REMINDER", "AND", "OR", "NOT", "GREATER_OP", "LESS_OP", 
                      "GREATER_eq_op", "LESS_eq_op", "EQUAL_OP", "ADD_eq_op", 
                      "SUB_eq_op", "EQUALITY_OP", "UNEQUALITY_OP", "POINT", 
                      "ID", "ALPHA", "DECIMAL_LITERAL", "DIGIT", "CHAR_LITERAL", 
                      "ALPHA_NUM", "HEX_DIGIT", "LINE_COMMENT", "COMMENT", 
                      "NEWLINE", "WHITESPACE" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_vardeclr = 2
    RULE_field_declr = 3
    RULE_array_id = 4
    RULE_field_var = 5
    RULE_var_id = 6
    RULE_struct_declr = 7
    RULE_method_declr = 8
    RULE_return_type = 9
    RULE_block = 10
    RULE_statement = 11
    RULE_method_call = 12
    RULE_expr = 13
    RULE_location = 14
    RULE_int_literal = 15
    RULE_char_literal = 16
    RULE_bool_literal = 17
    RULE_rel_op = 18
    RULE_eq_op = 19
    RULE_cond_op = 20
    RULE_literal = 21
    RULE_arith_op = 22
    RULE_var_type = 23
    RULE_assign_op = 24
    RULE_method_name = 25

    ruleNames =  [ "program", "declaration", "vardeclr", "field_declr", 
                   "array_id", "field_var", "var_id", "struct_declr", "method_declr", 
                   "return_type", "block", "statement", "method_call", "expr", 
                   "location", "int_literal", "char_literal", "bool_literal", 
                   "rel_op", "eq_op", "cond_op", "literal", "arith_op", 
                   "var_type", "assign_op", "method_name" ]

    EOF = Token.EOF
    CLASS=1
    PROGRAM=2
    IF=3
    ELSE=4
    FOR=5
    WHILE=6
    RETURN=7
    BREAK=8
    CONTINUE=9
    BOOLEAN=10
    CHAR=11
    INT=12
    TRUE=13
    FALSE=14
    VOID=15
    STRUCT=16
    CALLOUT=17
    SEMICOLON=18
    LCURLY=19
    RCURLY=20
    LSQUARE=21
    RSQUARE=22
    LROUND=23
    RROUND=24
    COMMA=25
    QUOTES=26
    APOSTROPHE=27
    ADD=28
    SUB=29
    MULTIPLY=30
    DIVIDE=31
    REMINDER=32
    AND=33
    OR=34
    NOT=35
    GREATER_OP=36
    LESS_OP=37
    GREATER_eq_op=38
    LESS_eq_op=39
    EQUAL_OP=40
    ADD_eq_op=41
    SUB_eq_op=42
    EQUALITY_OP=43
    UNEQUALITY_OP=44
    POINT=45
    ID=46
    ALPHA=47
    DECIMAL_LITERAL=48
    DIGIT=49
    CHAR_LITERAL=50
    ALPHA_NUM=51
    HEX_DIGIT=52
    LINE_COMMENT=53
    COMMENT=54
    NEWLINE=55
    WHITESPACE=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(DecafGramParser.CLASS, 0)

        def PROGRAM(self):
            return self.getToken(DecafGramParser.PROGRAM, 0)

        def LCURLY(self):
            return self.getToken(DecafGramParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DecafGramParser.RCURLY, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafGramParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(DecafGramParser.DeclarationContext,i)


        def getRuleIndex(self):
            return DecafGramParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = DecafGramParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(DecafGramParser.CLASS)
            self.state = 53
            self.match(DecafGramParser.PROGRAM)
            self.state = 54
            self.match(DecafGramParser.LCURLY)
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafGramParser.BOOLEAN) | (1 << DecafGramParser.CHAR) | (1 << DecafGramParser.INT) | (1 << DecafGramParser.VOID) | (1 << DecafGramParser.STRUCT))) != 0):
                self.state = 55
                self.declaration()
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 61
            self.match(DecafGramParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def struct_declr(self):
            return self.getTypedRuleContext(DecafGramParser.Struct_declrContext,0)


        def vardeclr(self):
            return self.getTypedRuleContext(DecafGramParser.VardeclrContext,0)


        def method_declr(self):
            return self.getTypedRuleContext(DecafGramParser.Method_declrContext,0)


        def field_declr(self):
            return self.getTypedRuleContext(DecafGramParser.Field_declrContext,0)


        def getRuleIndex(self):
            return DecafGramParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)




    def declaration(self):

        localctx = DecafGramParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.struct_declr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.vardeclr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.method_declr()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 66
                self.field_declr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(DecafGramParser.SEMICOLON, 0)

        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafGramParser.Var_typeContext)
            else:
                return self.getTypedRuleContext(DecafGramParser.Var_typeContext,i)


        def field_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafGramParser.Field_varContext)
            else:
                return self.getTypedRuleContext(DecafGramParser.Field_varContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafGramParser.COMMA)
            else:
                return self.getToken(DecafGramParser.COMMA, i)

        def getRuleIndex(self):
            return DecafGramParser.RULE_vardeclr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVardeclr" ):
                listener.enterVardeclr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVardeclr" ):
                listener.exitVardeclr(self)




    def vardeclr(self):

        localctx = DecafGramParser.VardeclrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardeclr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.var_type()
            self.state = 70
            self.field_var()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafGramParser.COMMA:
                self.state = 72
                self.match(DecafGramParser.COMMA)
                self.state = 73
                self.var_type()
                self.state = 74
                self.field_var()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(DecafGramParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(DecafGramParser.Var_typeContext,0)


        def field_var(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafGramParser.Field_varContext)
            else:
                return self.getTypedRuleContext(DecafGramParser.Field_varContext,i)


        def SEMICOLON(self):
            return self.getToken(DecafGramParser.SEMICOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafGramParser.COMMA)
            else:
                return self.getToken(DecafGramParser.COMMA, i)

        def getRuleIndex(self):
            return DecafGramParser.RULE_field_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_declr" ):
                listener.enterField_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_declr" ):
                listener.exitField_declr(self)




    def field_declr(self):

        localctx = DecafGramParser.Field_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_field_declr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.var_type()
            self.state = 84
            self.field_var()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafGramParser.COMMA:
                self.state = 85
                self.match(DecafGramParser.COMMA)
                self.state = 86
                self.field_var()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 92
            self.match(DecafGramParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafGramParser.RULE_array_id

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Array_id_structContext(Array_idContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafGramParser.Array_idContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(DecafGramParser.ID, 0)
        def LSQUARE(self):
            return self.getToken(DecafGramParser.LSQUARE, 0)
        def RSQUARE(self):
            return self.getToken(DecafGramParser.RSQUARE, 0)
        def POINT(self, i:int=None):
            if i is None:
                return self.getTokens(DecafGramParser.POINT)
            else:
                return self.getToken(DecafGramParser.POINT, i)
        def location(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafGramParser.LocationContext)
            else:
                return self.getTypedRuleContext(DecafGramParser.LocationContext,i)

        def int_literal(self):
            return self.getTypedRuleContext(DecafGramParser.Int_literalContext,0)

        def var_id(self):
            return self.getTypedRuleContext(DecafGramParser.Var_idContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_id_struct" ):
                listener.enterArray_id_struct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_id_struct" ):
                listener.exitArray_id_struct(self)


    class Array_id_varContext(Array_idContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafGramParser.Array_idContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(DecafGramParser.ID, 0)
        def LSQUARE(self):
            return self.getToken(DecafGramParser.LSQUARE, 0)
        def RSQUARE(self):
            return self.getToken(DecafGramParser.RSQUARE, 0)
        def int_literal(self):
            return self.getTypedRuleContext(DecafGramParser.Int_literalContext,0)

        def var_id(self):
            return self.getTypedRuleContext(DecafGramParser.Var_idContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArray_id_var" ):
                listener.enterArray_id_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArray_id_var" ):
                listener.exitArray_id_var(self)



    def array_id(self):

        localctx = DecafGramParser.Array_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_array_id)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = DecafGramParser.Array_id_structContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 94
                self.match(DecafGramParser.ID)
                self.state = 95
                self.match(DecafGramParser.LSQUARE)
                self.state = 98
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [DecafGramParser.DECIMAL_LITERAL]:
                    self.state = 96
                    self.int_literal()
                    pass
                elif token in [DecafGramParser.ID]:
                    self.state = 97
                    self.var_id()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 100
                self.match(DecafGramParser.RSQUARE)
                self.state = 101
                self.match(DecafGramParser.POINT)
                self.state = 102
                self.location()
                self.state = 105
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 103
                    self.match(DecafGramParser.POINT)
                    self.state = 104
                    self.location()


                pass

            elif la_ == 2:
                localctx = DecafGramParser.Array_id_varContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(DecafGramParser.ID)
                self.state = 108
                self.match(DecafGramParser.LSQUARE)
                self.state = 111
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [DecafGramParser.DECIMAL_LITERAL]:
                    self.state = 109
                    self.int_literal()
                    pass
                elif token in [DecafGramParser.ID]:
                    self.state = 110
                    self.var_id()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 113
                self.match(DecafGramParser.RSQUARE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_varContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_id(self):
            return self.getTypedRuleContext(DecafGramParser.Var_idContext,0)


        def array_id(self):
            return self.getTypedRuleContext(DecafGramParser.Array_idContext,0)


        def getRuleIndex(self):
            return DecafGramParser.RULE_field_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_var" ):
                listener.enterField_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_var" ):
                listener.exitField_var(self)




    def field_var(self):

        localctx = DecafGramParser.Field_varContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_field_var)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.var_id()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.array_id()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DecafGramParser.RULE_var_id

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Var_id_varContext(Var_idContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafGramParser.Var_idContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(DecafGramParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_id_var" ):
                listener.enterVar_id_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_id_var" ):
                listener.exitVar_id_var(self)


    class Var_id_structContext(Var_idContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DecafGramParser.Var_idContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(DecafGramParser.ID, 0)
        def POINT(self, i:int=None):
            if i is None:
                return self.getTokens(DecafGramParser.POINT)
            else:
                return self.getToken(DecafGramParser.POINT, i)
        def location(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafGramParser.LocationContext)
            else:
                return self.getTypedRuleContext(DecafGramParser.LocationContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_id_struct" ):
                listener.enterVar_id_struct(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_id_struct" ):
                listener.exitVar_id_struct(self)



    def var_id(self):

        localctx = DecafGramParser.Var_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_id)
        try:
            self.state = 129
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = DecafGramParser.Var_id_structContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 121
                self.match(DecafGramParser.ID)
                self.state = 122
                self.match(DecafGramParser.POINT)
                self.state = 123
                self.location()
                self.state = 126
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                if la_ == 1:
                    self.state = 124
                    self.match(DecafGramParser.POINT)
                    self.state = 125
                    self.location()


                pass

            elif la_ == 2:
                localctx = DecafGramParser.Var_id_varContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 128
                self.match(DecafGramParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_declrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(DecafGramParser.STRUCT, 0)

        def ID(self):
            return self.getToken(DecafGramParser.ID, 0)

        def LCURLY(self):
            return self.getToken(DecafGramParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DecafGramParser.RCURLY, 0)

        def SEMICOLON(self):
            return self.getToken(DecafGramParser.SEMICOLON, 0)

        def vardeclr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafGramParser.VardeclrContext)
            else:
                return self.getTypedRuleContext(DecafGramParser.VardeclrContext,i)


        def getRuleIndex(self):
            return DecafGramParser.RULE_struct_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStruct_declr" ):
                listener.enterStruct_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStruct_declr" ):
                listener.exitStruct_declr(self)




    def struct_declr(self):

        localctx = DecafGramParser.Struct_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_struct_declr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(DecafGramParser.STRUCT)
            self.state = 132
            self.match(DecafGramParser.ID)
            self.state = 133
            self.match(DecafGramParser.LCURLY)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafGramParser.BOOLEAN) | (1 << DecafGramParser.CHAR) | (1 << DecafGramParser.INT) | (1 << DecafGramParser.STRUCT))) != 0):
                self.state = 134
                self.vardeclr()
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(DecafGramParser.RCURLY)
            self.state = 141
            self.match(DecafGramParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def return_type(self):
            return self.getTypedRuleContext(DecafGramParser.Return_typeContext,0)


        def method_name(self):
            return self.getTypedRuleContext(DecafGramParser.Method_nameContext,0)


        def LROUND(self):
            return self.getToken(DecafGramParser.LROUND, 0)

        def RROUND(self):
            return self.getToken(DecafGramParser.RROUND, 0)

        def block(self):
            return self.getTypedRuleContext(DecafGramParser.BlockContext,0)


        def VOID(self):
            return self.getToken(DecafGramParser.VOID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafGramParser.COMMA)
            else:
                return self.getToken(DecafGramParser.COMMA, i)

        def var_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafGramParser.Var_typeContext)
            else:
                return self.getTypedRuleContext(DecafGramParser.Var_typeContext,i)


        def var_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafGramParser.Var_idContext)
            else:
                return self.getTypedRuleContext(DecafGramParser.Var_idContext,i)


        def getRuleIndex(self):
            return DecafGramParser.RULE_method_declr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_declr" ):
                listener.enterMethod_declr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_declr" ):
                listener.exitMethod_declr(self)




    def method_declr(self):

        localctx = DecafGramParser.Method_declrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_method_declr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.return_type()
            self.state = 144
            self.method_name()
            self.state = 145
            self.match(DecafGramParser.LROUND)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafGramParser.BOOLEAN) | (1 << DecafGramParser.CHAR) | (1 << DecafGramParser.INT) | (1 << DecafGramParser.VOID) | (1 << DecafGramParser.STRUCT))) != 0):
                self.state = 150
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [DecafGramParser.BOOLEAN, DecafGramParser.CHAR, DecafGramParser.INT, DecafGramParser.STRUCT]:
                    self.state = 146
                    self.var_type()
                    self.state = 147
                    self.var_id()
                    pass
                elif token in [DecafGramParser.VOID]:
                    self.state = 149
                    self.match(DecafGramParser.VOID)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 158
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DecafGramParser.COMMA:
                    self.state = 152
                    self.match(DecafGramParser.COMMA)
                    self.state = 153
                    self.var_type()
                    self.state = 154
                    self.var_id()
                    self.state = 160
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 163
            self.match(DecafGramParser.RROUND)
            self.state = 164
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(DecafGramParser.Var_typeContext,0)


        def VOID(self):
            return self.getToken(DecafGramParser.VOID, 0)

        def getRuleIndex(self):
            return DecafGramParser.RULE_return_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_type" ):
                listener.enterReturn_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_type" ):
                listener.exitReturn_type(self)




    def return_type(self):
